<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="ylescort.ylmobileandroid.boxlist">

    <TextView
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:id="@+id/boxlv_tv_order"
        android:text="@string/boxitem_order"/>
    <TextView
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:id="@+id/boxlv_tv_Boxid"
        android:text="@string/boxitem_Boxid"
        android:layout_toRightOf="@+id/boxlv_tv_order"/>
    <TextView
        android:layout_width="35dp"
        android:layout_height="wrap_content"
        android:id="@+id/boxlv_tv_TradeAction"
        android:text="@string/boxitem_TradeAction"
        android:layout_toRightOf="@+id/boxlv_tv_Boxid"/>
    <TextView
        android:layout_width="35dp"
        android:layout_height="wrap_content"
        android:id="@+id/boxlv_tv_Status"
        android:text="@string/boxitem_Status"
        android:layout_toRightOf="@+id/boxlv_tv_TradeAction"/>
    <TextView
    android:layout_width="35dp"
    android:layout_height="wrap_content"
    android:id="@+id/boxlv_tv_type"
    android:text="@string/boxitem_type"
    android:layout_toRightOf="@+id/boxlv_tv_Status"/>
    <TextView
        android:layout_width="35dp"
        android:layout_height="wrap_content"
        android:id="@+id/boxlv_tv_tasktype"
        android:text="@string/boxitem_tasktype"
        android:layout_toRightOf="@+id/boxlv_tv_type"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/boxlv_tv_count"
        android:text="数量"
        android:layout_toRightOf="@+id/boxlv_tv_tasktype"/>
</RelativeLayout>
