<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ylescort.ylmobileandroid.HomYLBoxScan">

    <LinearLayout
        android:id="@+id/homylboxscan_ll_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/homylboxscan_tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/box_tv_title"
            android:textColor="@color/darkorange"
            android:textSize="25sp" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/homylboxscan_rl_boxname"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/homylboxscan_ll_title"
        android:layout_marginTop="5sp">

        <TextView
            android:id="@+id/homylboxscan_tv_boxname_lable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/boxitem_Boxid"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/homylboxscan_tv_boxname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/homylboxscan_tv_boxname_lable"
            android:textColor="@color/black"
            android:textSize="25sp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/homylboxscan_rl_boxsype"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/homylboxscan_rl_boxname"
        android:layout_marginTop="5sp">

        <TextView
            android:id="@+id/homylboxscan_tv_boxaction_lable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/boxitem_TradeAction"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/homylboxscan_tv_boxaction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/homylboxscan_tv_boxaction_lable"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="110sp"
            android:text="@string/boxitem_type"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/homylboxscan_tv_boxtype"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10sp"
            android:layout_marginStart="170sp"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5sp"
            android:layout_toStartOf="@+id/homylboxscan_tv_boxcount"
            android:text="@string/boxitem_count"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/homylboxscan_tv_boxcount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="5sp"
            android:textColor="@color/black"
            android:textSize="15sp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/homylboxscan_rl_tasktype"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/homylboxscan_rl_boxsype"
        android:layout_marginTop="5sp">

        <TextView
            android:id="@+id/homylboxscan_tv_boxstaut_lable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/boxitem_Status"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/homylboxscan_tv_boxstaut"
            android:layout_width="wrap_content"

            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/homylboxscan_tv_boxstaut_lable"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="110sp"
            android:text="@string/boxitem_tasktype"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/homylboxscan_tv_tasktype"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10sp"
            android:textColor="@color/black"
            android:textSize="25sp" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/homylboxscan_ll_taskdate"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/homylboxscan_rl_tasktype"
        android:layout_marginTop="5sp">

        <TextView
            android:id="@+id/homylboxscan_tv_boxtasktype_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5sp"
            android:text="@string/homscanbox_tasktype"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/homylboxscan_sp_tasktype"
            android:layout_width="125sp"
            android:layout_height="40sp"
            android:layout_marginTop="5sp"
            android:background="@color/lightblue"
            android:spinnerMode="dialog">
        </Spinner>

        <Button
            android:id="@+id/homylboxscan_btn_date"
            android:layout_width="110sp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5sp"
            android:text="@string/hom_ylbox_btn_date"
            android:textSize="15sp" />
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5sp"
            android:textColor="@color/androidblued"
            android:id="@+id/homylboxscan_cb_date"
            android:text="@string/homscanbox_cb_date"/>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/homylboxscan_ll_boxgog"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/homylboxscan_ll_taskdate"
        android:background="@drawable/border">

        <RadioGroup
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/homylboxscan_rbtn_get"
                style="@style/TextSize25"
                android:layout_width="150sp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5sp"
                android:orientation="horizontal"
                android:text="@string/box_tv_get" />

            <RadioButton
                android:id="@+id/homylboxscan_rbtn_give"
                style="@style/TextSize25"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/box_tv_give" />

        </RadioGroup>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/homylboxscan_ll_boxfoe"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/homylboxscan_ll_boxgog"
        android:background="@drawable/border">

        <RadioGroup
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5sp"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/homylboxscan_rbtn_full"
                style="@style/TextSize25"
                android:layout_width="150sp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5sp"
                android:orientation="horizontal"
                android:text="@string/box_tv_full" />

            <RadioButton
                android:id="@+id/homylboxscan_rbtn_empty"
                style="@style/TextSize25"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/box_tv_empty" />
        </RadioGroup>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/homylboxscan_ll_boxtype"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/homylboxscan_ll_boxfoe"
        android:background="@drawable/border">

        <Button
            android:id="@+id/homylboxscan_btn_boxtype"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/box_btn_boxtype" />

        <TextView
            android:id="@+id/homylboxscan_tv_moneybox"
            style="@style/TextSize25"
            android:layout_width="110sp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5sp"
            android:layout_marginStart="5sp"
            android:layout_marginTop="5sp"
            android:text="@string/boxitem_monenybox"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/homylboxscan_tv_cardbox"
            style="@style/TextSize25"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5sp"
            android:layout_marginStart="5sp"
            android:layout_marginTop="5sp"
            android:text="@string/boxitem_cardbox"
            android:textColor="@color/black" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/homylboxscan_ll_boxtype">

        <CheckBox
            android:id="@+id/homylboxscan_cb_scan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5sp"
            android:text="@string/box_cb_scan"
            android:textColor="@color/androidredl"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/homylboxscan_tv_Voucher"
            style="@style/TextSize20"
            android:layout_width="100sp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5sp"
            android:text="@string/boxitem_Voucherbox"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/homylboxscan_tv_Voucherbag"
            style="@style/TextSize20"
            android:layout_width="100sp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5sp"
            android:layout_marginTop="5sp"
            android:text="@string/boxitem_Voucherboxbag"
            android:textColor="@color/black" />

        <CheckBox
            android:id="@+id/homylboxscan_cb_complie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5sp"
            android:text="@string/box_cb_complie"
            android:textColor="@color/androidgreenl"
            android:textSize="30sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/homylboxscan_ll_btn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center">

        <Button
            android:id="@+id/homylboxscan_btn_scan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/box_btn_scan1d" />

        <Button
            android:id="@+id/homylboxscan_btn_nonelable"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15sp"
            android:text="@string/box_btn_nolable" />

        <Button
            android:id="@+id/homylboxscan_btn_ent"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15sp"
            android:text="@string/box_btn_arrive" />
    </LinearLayout>

</RelativeLayout>
